# architecture

./: .gitignore  CMakeLists.txt  input  input.cpp  main.cpp  makefile
optimised/: CMakeLists.txt
src/: BinTree.cpp  BinTree.h  BinTreeToOptimise.cpp
src/optimisation/: CMakeLists.txt
src/optimised/: BinTree.cpp
test/: BinTree_test.cpp  CMakeLists.txt
